Add date/time fields and improve logging/debug
Introduces date and time input fields to the Tracker web interface and auto-fills them via a new onLoad script. Tracker now sets RTC and system time from loaded settings if date/time are present. Logging is improved with formatted JSON output and better log level usage. Buffer size for logging is now defined via LOG_BUFFER_SIZE. Minor UI and code cleanups included.

--- a/code/ESP32/main/include/IOT.htm
+++ b/code/ESP32/main/include/IOT.htm
@@ -126,7 +126,7 @@ const char network_config_top[] PROGMEM = R"rawliteral(
 
       window.onload = function() {
         loadSettings();
-
+        {onload}
         const form = document.getElementById('settingsForm');
         if (form) {
           form.addEventListener('submit', async (e) => {
@@ -315,9 +315,9 @@ const char network_config[] PROGMEM = R"rawliteral(
     <label for="networkSelector">Network Mode</label>
     <select id="networkSelector" name="Network" onchange="showFields()">
       <option value="APMode" >AP Mode</option>
-      <option value="WiFiMode" >WiFi</option>
-      <option value="EthernetMode" >Ethernet</option>
-      <option value="ModemMode" >4G Modem</option>
+      <option value="WiFiMode">WiFi</option>
+      <option value="EthernetMode" {ETH}>Ethernet</option>
+      <option value="ModemMode" {4G}>4G Modem</option>
     </select>
   </div>
 
