--- a/code/ESP32/main/include/Tracker.htm
+++ b/code/ESP32/main/include/Tracker.htm
@@ -12,6 +12,16 @@ const char validate_script[] PROGMEM = R"rawliteral(
   </script>
 )rawliteral";
 
+const char onLoadScript[] PROGMEM = R"rawliteral(
+  <script>
+    const now = new Date();
+    const _date = document.getElementById('_date');
+    const _time = document.getElementById('_time');
+    _date.value = now.toISOString().split('T')[0];
+    _time.value = now.toTimeString().slice(0,5);
+  </script>
+)rawliteral";
+
 const char home_html[] PROGMEM = R"rawliteral(
 <!DOCTYPE html>
 <html lang=\"en\">
@@ -24,6 +34,7 @@ const char home_html[] PROGMEM = R"rawliteral(
 
   window.onload = function() {
     initWebSocket();
+
   }
     function sendCommand(cmd) {
     console.log("Command:", cmd);
@@ -101,6 +112,16 @@ const char app_config[] PROGMEM = R"rawliteral(
         <input type="checkbox" id="_hasAnemometer" name="_hasAnemometer" />
         <span class="muted">Has Anemometer</span>
       </div>
+    </div>
+
+    <!-- Date Time -->
+    <div class="field">
+      <label for="_date">Date:</label>
+      <input type="date" id="_date" name="_date">
+    </div>
+    <div class="field">
+      <label for="_time">Time:</label>
+      <input type="time" id="_time" name="_time">
     </div>
 
     <!-- Geolocation -->
